--- a/scripts/178_new_F4.Rmd
+++ b/scripts/178_new_F4.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "New F3"
+title: "New F4"
 author: "Anqi Dai"
 date: "`r Sys.Date()`"
 output: html_document
@@ -14,13 +14,15 @@ library(tidyverse)
 library(ggpubr)
 library(scales)
 library(tidybayes)
+library(ggtext)
 library(cowplot)
-theme_set(theme_pubr(base_size = 8))
+zero_line_size = .8
+theme_set(theme_pubr(base_size = 10))
 key <- read_csv('../data/food_group_color_key_final.csv', col_types = 'ccccc')
 DTB <- read_csv('../data/152_combined_DTB.csv')
 ```
 
-# prep the df 
+# spearman cor
 
 ```{r}
 # correlate top genus abundance with diversity, check if entero and kleb have most negative correlation
@@ -58,20 +60,19 @@ spearman_all <- spearman_res %>%
   mutate(n = ifelse(is.na(n), 0, n),
          passthre_perc = ifelse(is.na(passthre_perc), 0, passthre_perc)) %>% 
     filter(passthre_perc > 10) %>% 
-  mutate(changed_pval = if_else(pval == 0, pval + tinypseudo, pval)) %>% 
-  mutate(padj = p.adjust(changed_pval, method = 'BH'),
-         neglogp = -log10(padj)) %>% 
+  mutate(padj = p.adjust(pval, method = 'BH')) %>% 
   mutate(sig05 = if_else(padj < 0.05, 'FDR < 0.05', 'FDR >= 0.05')) %>% 
-  mutate(Correlation = if_else(rho >= 0, 'higher diversity', 'lower diversity')) %>% 
+  mutate(Correlation = if_else(rho >= 0, 'higher_div', 'lower_div')) %>% 
   arrange(rho, desc(genus)) 
 
-
-spearman_all %>% write_csv('../data/172_spearman_all.csv')
 ```
 
+## 4A: bar plot
+
 ```{r}
-res <- read_csv('../data/172_spearman_all.csv') %>% 
-  mutate(Correlation = factor(Correlation, levels = c('lower diversity','higher diversity')))
+res <- spearman_all %>% 
+  mutate(Correlation = factor(Correlation, levels = c('lower_div','higher_div')))
+
 
 # make a panel with only top 5 significant ones in either direction for the main figure 3
 main <- res %>% 
@@ -79,36 +80,62 @@ main <- res %>%
   split(.$Correlation) %>% 
   map(function(df){
     df %>% mutate(absrho = abs(rho)) %>% slice_max(order_by =absrho, n = 5 )
-  }) %>% bind_rows()
+  }) %>% bind_rows() %>% 
+  arrange(desc(rho))
+
+genus_order <- main$genus
 
 correbar <- main %>% 
-  ggbarplot(x = 'genus', y = 'rho', orientation = c( "horizontal"),
-            sort.val = "desc",   fill = "Correlation",  color = "white",    palette = "jco",     sort.by.groups = F,     ylab = "Spearman correlation",    xlab = '') +
-  theme(legend.position = c(.8,.8),axis.text=element_text(size=10),axis.title=element_text(size=10),legend.text  = element_text(size=8), legend.title = element_text(size = 8), 
-         aspect.ratio=1/1.3) +
-  guides(fill = guide_legend(title = "Correlated with"))
+  mutate(genus = factor(genus, levels = genus_order)) %>% 
+  ggplot( aes(x = genus, y = 0, xend = genus, yend = rho, color = Correlation)) + 
+  geom_segment(size = 4) + 
+  labs(x = '', y ='Spearman correlation') +
+  scale_color_jco() +
+  coord_flip() +
+  theme(axis.text=element_text(size=10),axis.title=element_text(size=10),legend.position = 'none',
+        axis.text.y = element_markdown(face = "italic"),
+         aspect.ratio=1/1.3)
+correbar
 ```
+
+ 
+
+## supp: all bars 
 
 ```{r}
 # make a panel with all the sig ones for the supplementary
-correbar_all <- res %>% 
+# use the more abundant genus from the filtering I used
+selected <- read_csv('../data/087_more_abundant_0.002_genus_33.csv')
+ 
+selected_bars <- res %>% 
+  filter(genus %in% selected$genus) %>% 
   filter(sig05 == 'FDR < 0.05') %>% 
-  ggbarplot(x = 'genus', y = 'rho', orientation = c( "horizontal"),
-            sort.val = "desc",   fill = "Correlation",  color = "white",    palette = "jco",     sort.by.groups = F,     ylab = "Spearman correlation",    xlab = '') +
-  theme(legend.position = c(.8,.8),axis.text=element_text(size=10),axis.title=element_text(size=10),legend.text  = element_text(size=8), legend.title = element_text(size = 8), 
-         aspect.ratio=1.8) +
-  guides(fill = guide_legend(title = "Correlated with"))
+  arrange(desc(rho))
+
+all_order <- selected_bars$genus
+
+correbar_all <- selected_bars %>% 
+   mutate(genus = factor(genus, levels = all_order)) %>%
+ ggplot( aes(x = genus, y = 0, xend = genus, yend = rho, color = Correlation)) + 
+  geom_segment(size = 8) + 
+  labs(x = '', y ='Spearman correlation') +
+  scale_color_jco() +
+  coord_flip() +
+  theme(axis.text=element_text(size=10),axis.title=element_text(size=10),legend.position = 'none',
+        axis.text.y = element_markdown(face = "italic"))
+```
 
 
+```{r}
 title <- ggdraw() + 
   draw_label(
-    "Fig. S7",
+    "Fig. S12",
     fontface = 'bold',
     x = 0,
     hjust = 0
   ) +
   theme(
-    plot.margin = margin(0, 0, 0, 7)
+    plot.margin = margin(0, 0, 0, 5)
   )
  
 combined <- plot_grid(
@@ -116,13 +143,13 @@ combined <- plot_grid(
   ncol = 1,
   # rel_heights values control vertical title margins
   rel_heights = c(0.1, 1)
-)+theme(plot.margin = unit(c(1,1,1,1), "cm"))
+)+theme(plot.margin = unit(c(1,1,4,1), "cm"))
 
-ggsave('../data/S7_genus_diversity_correlation_178.pdf',
-      width = 210, height = 290, units = "mm", device = 'pdf', plot = combined, dpi = 300)
+ggsave('../data/S12_genus_diversity_correlation_178.pdf',
+      width = 210, height = 297, units = "mm", device = 'pdf', plot = combined, dpi = 300)
 ```
 
-# the Enterococcus results
+# 4B: the Enterococcus results
 
 ```{r}
 entero <- read_csv('../data/171_entero_model_fg_post_interaction.csv')  %>% 
@@ -197,19 +224,7 @@ arrange_label <- tibble(ord = total_order) %>%
 
 ```
 
-```{r}
-# color the most positive one with red: the abx + sweets        
-mostpos <- entero %>%   
-  group_by(shortname) %>% 
-  count(coeff > 0) %>% 
-  ungroup %>% 
-  filter(`coeff > 0` == 'TRUE') %>% 
-  arrange(desc(n)) %>% 
-  top_n(1) %>% 
-  pull(shortname)
-mostpos
 
-```
 
 ```{r}
 # I need to create a data frame that has the coordinates of the rectangles that I wanna create
@@ -234,33 +249,47 @@ blue_terms <- tibble(
 ```
 
 ```{r}
-entero_df <- entero %>% 
-  mutate(mark = if_else(shortname %in% mostpos, 'mostpos','others')) %>% 
-  mutate(shortname = factor(shortname, levels = total_order))
+# the credible interval for the entero caterpillar 
+entero %>% 
+  filter(item == 'sweets_e') %>% 
+  group_by(item) %>% 
+  tidybayes::median_qi(coeff , .width = c(.95)) %>% 
+  mutate(coeff = round(coeff, digits = 2), 
+         .lower = round(.lower, digits = 2), 
+         .upper = round(.upper, digits = 2) )
 
+cross0 <- entero %>%
+  group_by(item) %>% 
+  summarise(q2.5 = round(quantile(coeff, probs = 0.025), 2),
+            q97.5 = round(quantile(coeff, probs = 0.975), 2)) %>% 
+  mutate(Cross = if_else(q2.5 >= 0 | q97.5 <= 0, F, T))
 ```
+
+## caterpilllar
 
 ```{r}
-entero_panel <- entero_df %>%   
+entero_panel <- entero %>%  
+  mutate(shortname = factor(shortname, levels = total_order)) %>% 
+  left_join(cross0) %>% 
   ggplot() +
-  stat_pointinterval(aes(x = coeff, y = shortname, col = mark),.width = c(.66, .95), fatten_point = 1.2) +
+  stat_pointinterval(aes(x = coeff, y = shortname, col = Cross),.width = .95, fatten_point = 1.2) +
    geom_rect(data = interaction_terms, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, fill = interaction_fill), alpha = .1) +
   geom_rect(data = blue_terms, aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, fill = blue_fill) , alpha = .1) +
-  scale_fill_manual(values=c("interaction_fill" = "lightblue", "blue_fill" = "royalblue")) +
-  geom_vline(xintercept = 0, col = 'black', linetype = 'dashed') +
+  scale_fill_manual(values=c("interaction_fill" = "tan2", "blue_fill" = "#FAEFD1")) +
+  scale_color_manual(values = c("#EC0000", "black")) +
+  scale_y_discrete( labels = function(x) { ifelse(str_detect(x, '\\*'),  str_glue("<b style='color:royalblue'>{x}</b>"), as.character(x)) }) +
+  geom_vline(xintercept = 0, col = 'blue', size = zero_line_size) +
   labs(x = 'CLR(Enterococcus) change', y = '') +
-  #annotate("text", x = 2, y = 18, label = "97.3% > 0", col = 'coral1') + 
   theme_classic() +
   theme(legend.position = 'none') +
-  scale_color_manual(values = c("coral1", "black")) +
-  theme(axis.text.y = element_text( size = 10), plot.background = element_rect(fill='transparent', color=NA), 
+  theme( plot.background = element_rect(fill='transparent', color=NA), 
+        axis.text.y = element_markdown(),
         axis.title=element_text(size=10), aspect.ratio=1.3 )
 
-entero_panel 
-
+entero_panel  
 ```
 
-# the mouse experiment   
+# 4C: the mouse experiment   
 
 ```{r combined_data}
 newest <- readxl::read_excel('../data/Sucrose_All Experiments Consolidated .xlsx') %>% 
@@ -284,9 +313,6 @@ n_per_grp <- newest %>%
   count(diet_treatment, abx_treatment)
 range(n_per_grp$n)
 ```
-
-
-
 
 
 
@@ -332,16 +358,14 @@ grps <- plotdf %>% count(xvar)
 df <- dat_entero_wide %>% 
   filter(Day6 < Day0)
 ```
-```{r}
+
+```{r fold_change}
 # the median fold change and the p value for the star in the 3C upper panel
 deltas <- plotdf %>%
   select(grp, Day, Mouse_identifier, CFUs_per_GramStool) %>% 
   spread('Day','CFUs_per_GramStool') %>%
   rename(d0 = `0`, d3 = `3`,d6 = `6`)
-```
 
-
-```{r}
 # the fold change on day 3
 day3fc <- deltas %>% 
   filter(str_detect(grp, 'biapenem')) %>% 
@@ -382,6 +406,7 @@ res <- wilcox.test(d6 ~ grp, data = deltas %>%
                    exact = FALSE)
 res
 ```
+## mouse panel
 
 ```{r}
 f3_days <- plotdf %>%    
@@ -424,12 +449,13 @@ f3_AUC_stats <- ggboxplot(dat_entero_wide,
   theme(axis.text.x = element_blank(),axis.title=element_text(size=10), axis.text =  element_text(size = 10),legend.position = 'none',aspect.ratio=1/3.1, axis.ticks.x = element_blank())
 ```
 
+# final graph
 
 ```{r}
 # assemble
 title <- ggdraw() + 
   draw_label(
-    "Fig. 3",
+    "Fig. 4",
     fontface = 'bold',
     x = 0,
     hjust = 0
@@ -450,6 +476,6 @@ combined <- plot_grid(
   rel_heights = c(0.05, 1)
 )+theme(plot.margin = unit(c(1,9,2,1), "cm"))
 
-ggsave('../data/F3_current_178_changing.pdf',
+ggsave('../data/F4_current_178_changing.pdf',
       width = 210, height = 297, units = "mm", device = 'pdf', plot = combined, dpi = 300)
 ```
